--- a/app/views/servicerequests/index.html
+++ b/app/views/servicerequests/index.html
@@ -8,7 +8,7 @@
     <!--start toolbar actions-->
     <div class="page-content-actions padding-left-10" ng-include="'views/parties/_partials/actions.html'">
     </div>
-    <!--end toolbar acctions-->
+    <!--end toolbar actions-->
     <!--start main content-->
     <table class="table" data-plugin="animateList" data-animate="fade" data-child="tr" ng-include="'views/parties/_partials/parties.html'">
     </table>
