Legacy Pre-Upgrade to v1
- Update Jurisdiction UI to support lateste majifix-jurisdiction
- Improve exports to offer date, date, time latitude and longitude

--- a/app/views/jurisdictions/_partials/detail.html
+++ b/app/views/jurisdictions/_partials/detail.html
@@ -40,10 +40,10 @@
                                             <label title="Email Address" class="floating-label">Email</label>
                                         </div>
                                     </div>
-                                    <div class="col-sm-6" title="Jurisdiction Domain">
+                                    <div class="col-sm-6" title="Jurisdiction Website">
                                         <div class="form-group form-material floating">
-                                            <input ng-disabled="!edit" ng-model="jurisdiction.domain" ng-required ng-minlength="2" type="text" name="domain" class="form-control" />
-                                            <label title="Domain Name" class="floating-label">Domain</label>
+                                            <input ng-disabled="!edit" ng-model="jurisdiction.website" ng-required ng-minlength="2" type="text" name="website" class="form-control" />
+                                            <label title="Website URL" class="floating-label">Website</label>
                                         </div>
                                     </div>
                                 </div>
