--- a/app/views/alerts/_partials/list.html
+++ b/app/views/alerts/_partials/list.html
@@ -33,7 +33,8 @@
                 {{alert.createdAt | date:'dd MMM yyyy HH:mm'}}
               </span>
               <div class="item-title">
-                <a href="#" class="_500">{{alert.subject}}
+                <a href="#" class="_500">
+                  {{alert.subject}} - {{alert.methods.join(', ')}}
                   <br />
                   <span class="font-size-12">
                     <span class="text-muted" ng-repeat="method in alert.methods">
