--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -126,7 +126,7 @@
             <!-- end assignee -->
             <span ng-if="!servicerequest.resolvedAt" uib-dropdown class="label primary m-l" title="Status" style="background-color:{{servicerequest.status.color}}">
                            <span uib-dropdown-toggle class="font-size-12 text-white">Status: {{servicerequest.status.name}} </span>
-            <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
+            <div ng-if="servicerequest.operator" uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
               <a ng-repeat="status in statuses" ng-click="changeStatus(status)" class="dropdown-item" href="#" title="Status - {{status.name}}">
                                 <span>{{status.name}}</span>
                             </a>
@@ -134,7 +134,7 @@
             </span>
             <span ng-if="!servicerequest.resolvedAt" uib-dropdown class="label danger m-l" title="Priority" style="background-color:{{servicerequest.priority.color}}">
                             <span uib-dropdown-toggle class="font-size-12 text-white">Priority: {{servicerequest.priority.name}}</span>
-            <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
+            <div ng-if="servicerequest.operator" uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
               <a ng-repeat="priority in priorities" ng-click="changePriority(priority)" class="dropdown-item" href="#" title="Priority {{priority.name}}">
                                 <span>{{priority.name}}</span>
                             </a>
