--- a/app/views/account/_partials/account_details.html
+++ b/app/views/account/_partials/account_details.html
@@ -1,188 +1,193 @@
 <!-- modal header -->
 <div class="modal-header">
-    <div class="b-b">
-        <button type="button" class="close pull-right" ng-click="$close()" aria-hidden="true">×</button>
-        <h4 class="modal-title">Customer Details</h4>
-    </div>
+  <div class="b-b">
+    <button type="button" class="close pull-right" ng-click="$close()"
+      aria-hidden="true">×</button>
+    <h4 class="modal-title">Customer Details</h4>
+  </div>
 </div>
 <!-- end modal header -->
 <!-- modal body -->
 <div class="modal-body">
-    <div class="box">
-        <div class="box-body">
+  <div class="box">
+    <div class="box-body">
 
-            <!-- start customer summary details -->
-            <div ng-if="account" class="item">
-                <div class="p-a-md">
-                    <div class="row m-t">
-                        <div class="col-md-12">
-                            <!-- start name avatar -->
-                            <a href="#" class="pull-left m-r-md">
-                             <span>
-                               <!-- TODO switch between actual image and letter avatar Use base64 uploader -->
-                               <letter-avatar title="{{account.name}}" data="{{account.name}}" height="96" width="96" shape="round" color="{{account.active ? '#63D471':'#EE6352'}}">
-                               </letter-avatar>
-                               <i class="on b-white"></i>
-                             </span>
-                            </a>
-                            <!-- end party avatar -->
+      <!-- start customer summary details -->
+      <div ng-if="account" class="item">
+        <div class="p-a-md">
+          <div class="row m-t">
+            <div class="col-md-12">
+              <!-- start name avatar -->
+              <a href="#" class="pull-left m-r-md">
+                <span>
+                  <!-- TODO switch between actual image and letter avatar Use base64 uploader -->
+                  <letter-avatar title="{{account.name}}" data="{{account.name}}"
+                    height="96" width="96" shape="round" color="{{account.active ? '#63D471':'#EE6352'}}">
+                  </letter-avatar>
+                  <i class="on b-white"></i>
+                </span>
+              </a>
+              <!-- end party avatar -->
 
-                            <!-- start party details -->
-                            <div class="clear m-b">
-                                <div class="row-col">
-                                    <h4 class="m-a-0 m-b-sm">
-                                        <!-- start customer name -->
-                                        <span title="Name">{{account.name}}</span>
-                                        <!-- end customer name -->
-                                        <!-- account number -->
-                                        <span class="m-l-sm" title="Account Number">#{{account.number}}</span>
-                                        <!-- account number -->
-                                    </h4>
-                                </div>
-                                <!-- start party relations -->
-                                <p class="text-muted m-t-sm">
-                                    <i class="fa fa-map-marker m-r-xs"></i>
-                                    <span title="Working Area">
-                                      {{account.fullAddress}}
-                                    </span>
-                                </p>
-                                <!-- end party relations -->
-                                <div class="block clearfix m-b">
-                                    <span>
-                                      <a href="" class="btn btn-icon btn-social rounded b-a btn-sm">
-                                        <i class="icon-phone"></i>
-                                        <i class="icon-phone indigo"></i>
-                                      </a>
-                                      <!-- TODO should initiate call -->
-                                      <span title="Phone Number"  class="text-muted">
-                                        {{account.phone ? account.phone : 'N/A'}}
-                                      </span>
-                                    </span>
-                                    <span class="m-l-md">
-                                      <a href="" class="btn btn-icon btn-social rounded b-a btn-sm">
-                                        <i class="icon-envelope"></i>
-                                        <i class="icon-envelope light-blue"></i>
-                                      </a>
-                                       <!-- TODO should initiate email -->
-                                      <span title="Email Address" class="text-muted">
-                                        {{account.email ? account.email : 'N/A'}}
-                                      </span>
-                                    </span>
-                                    <span class="m-l-md">
-                                        <a href="" class="btn btn-icon btn-social rounded b-a btn-sm">
-                                          <i class="icon-list"></i>
-                                          <i class="icon-list light-blue"></i>
-                                        </a>
-                                        <!-- TODO should initiate email -->
-                                        <a ui-sref="account.accessors" title="Account Accessors" class="text-muted">
-                                            View Account Accessors
-                                        </a>
-                                    </span>
-                                </div>
-                            </div>
-                            <!-- end party details -->
-                        </div>
-                    </div>
+              <!-- start party details -->
+              <div class="clear m-b">
+                <div class="row-col">
+                  <h4 class="m-a-0 m-b-sm">
+                    <!-- start customer name -->
+                    <span title="Name">{{account.name}}</span>
+                    <!-- end customer name -->
+                    <!-- account number -->
+                    <span class="m-l-sm" title="Account Number">#{{account.number}}</span>
+                    <!-- account number -->
+                  </h4>
                 </div>
-            </div>
-            <!-- end customer summary details -->
-
-            <!-- customer bill information -->
-            <div ng-if="account" class="row m-t-lg">
-                <div class="box box-shadow-z2">
-                    <div class="box-header">
-                        <h2>Mini Statement <span class="pull-right">Amount Due: {{account.outstandingBalance | currency:'Tsh '}}</span></h2>
-                    </div>
+                <!-- start party relations -->
+                <p class="text-muted m-t-sm">
+                  <i class="fa fa-map-marker m-r-xs"></i>
+                  <span title="Working Area">
+                    {{account.fullAddress}}
+                  </span>
+                </p>
+                <!-- end party relations -->
+                <div class="block clearfix m-b">
+                  <span>
+                    <a href="" class="btn btn-icon btn-social rounded b-a btn-sm">
+                      <i class="icon-phone"></i>
+                      <i class="icon-phone indigo"></i>
+                    </a>
+                    <!-- TODO should initiate call -->
+                    <span title="Phone Number" class="text-muted">
+                      {{account.phone ? account.phone : 'N/A'}}
+                    </span>
+                  </span>
+                  <span class="m-l-md">
+                    <a href="" class="btn btn-icon btn-social rounded b-a btn-sm">
+                      <i class="icon-envelope"></i>
+                      <i class="icon-envelope light-blue"></i>
+                    </a>
+                    <!-- TODO should initiate email -->
+                    <span title="Email Address" class="text-muted">
+                      {{account.email ? account.email : 'N/A'}}
+                    </span>
+                  </span>
+                  <span class="m-l-md">
+                    <a href="" class="btn btn-icon btn-social rounded b-a btn-sm">
+                      <i class="icon-list"></i>
+                      <i class="icon-list light-blue"></i>
+                    </a>
+                    <!-- TODO should initiate email -->
+                    <a ui-sref="account.accessors" title="Account Accessors"
+                      class="text-muted">
+                      View Account Accessors
+                    </a>
+                  </span>
                 </div>
-
-                <!-- bill tabs -->
-                <uib-tabset active="active" class="m-t-lg">
-                    <uib-tab ng-repeat="(key,bill) in account.bills" index="key" heading="{{bill.period.billedAt | date:'MMMM yyyy'}}">
-                        <div class="list box box-shadow-z2">
-                            <div class="box-header b-b">
-                                <h2>Control Number : {{bill.number}} <small class="pull-right text-muted text-sm">Date of Reading: {{bill.period.billedAt | date:'dd/MM/yyyy'}}</small></h2>
-                            </div>
-                            <div class="list-item">
-                                <div class="list-body">
-                                    <!-- bill item -->
-                                    <div class="list-item p-t-none p-b-none" ng-repeat="item in bill.items">
-                                        <span title="Item Price" class="pull-right text-sm">
-                                              {{item.price | currency:''}}
-                                            </span>
-                                        <div class="item-title">
-                                            <a href="#" class="font-size-14">{{item.name}}
-                                                  <span title="Quantity" class="font-size-13 text-muted">
-                                                    &nbsp;{{item.quantity ? '( ' + item.quantity +' '+ item.unit + ' )' :''}}
-                                                  </span>
-                                                </a>
-                                        </div>
-                                        <!--  bill item subitems -->
-                                        <div class="list text-muted">
-                                            <div class="list-item p-t-none p-b-none" ng-repeat="subitem in item.items">
-                                                <span title="Item Name" class="pull-right text-xs">
-                                                          {{subitem.quantity}}&nbsp;{{subitem.unit}}
-                                                  </span>
-                                                <div class="item-title">
-                                                    <a href="#" class="_500">{{subitem.name}}<br/>
-                                                       <span title="Date" class="text-sm text-muted">
-                                                          {{subitem.time | date:'dd/MM/yyyy'}}
-                                                       </span>
-                                                      </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- end bill item subitems -->
-                                    </div>
-                                    <!-- end bill item -->
-                                    <!-- bill balance summary -->
-                                    <div class="m-t-md">
-                                        <span>Open Balance</span>
-                                        <small class="text-muted pull-right">{{bill.balance.open | currency:'Tsh '}}</small>
-                                    </div>
-                                    <div>
-                                        <span>Periodic Charges</span>
-                                        <small class="text-muted pull-right">{{bill.balance.charges | currency:'Tsh '}}</small>
-                                    </div>
-                                    <div>
-                                        <span>Loan/Debt Balance</span>
-                                        <small class="text-muted pull-right">{{bill.balance.debt | currency:'Tsh '}}</small>
-                                    </div>
-                                    <div class="m-b-md">
-                                        <span>Closing Balance</span>
-                                        <small class="text-muted pull-right">{{bill.balance.close | currency:'Tsh '}}</small>
-                                    </div>
-                                    <!-- end bill balance summary -->
-                                    <!-- bill notes -->
-                                    <p class="_500 text-muted">
-                                        Note:&nbsp;{{bill.notes}}
-                                    </p>
-                                    <!-- end bill notes -->
-                                </div>
-                            </div>
-                        </div>
-                    </uib-tab>
-                </uib-tabset>
-                <!-- end bill tabs -->
+              </div>
+              <!-- end party details -->
             </div>
-            <!-- end customer bill information -->
-
-            <!-- account not found details -->
-            <div class="row-col">
-                <div ng-if="!account" class="row-cell v-m">
-                    <div class="text-center col-sm-6 offset-sm-3 p-y-lg">
-                        <p class="text-muted m-y-lg">Account Not Found</p>
-                    </div>
-                </div>
-            </div>
-            <!-- end account not found details -->
+          </div>
         </div>
+      </div>
+      <!-- end customer summary details -->
+
+      <!-- customer bill information -->
+      <div ng-if="account" class="row m-t-lg">
+        <div class="box box-shadow-z2">
+          <div class="box-header">
+            <h2>Mini Statement <span class="pull-right">Amount Due:
+                {{account.closingBalance | currency:'Tsh '}}</span></h2>
+          </div>
+        </div>
+
+        <!-- bill tabs -->
+        <uib-tabset active="active" class="m-t-lg">
+          <uib-tab ng-repeat="(key,bill) in account.bills" index="key" heading="{{bill.period.billedAt | date:'MMMM yyyy'}}">
+            <div class="list box box-shadow-z2">
+              <div class="box-header b-b">
+                <h2>Control Number : {{bill.number}} <small class="pull-right text-muted text-sm">Date
+                    of Reading: {{bill.period.billedAt | date:'dd/MM/yyyy'}}</small></h2>
+              </div>
+              <div class="list-item">
+                <div class="list-body">
+                  <!-- bill item -->
+                  <div class="list-item p-t-none p-b-none" ng-repeat="item in bill.items">
+                    <span title="Item Price" class="pull-right text-sm">
+                      {{item.price | currency:''}}
+                    </span>
+                    <div class="item-title">
+                      <a href="#" class="font-size-14">{{item.name}}
+                        <span title="Quantity" class="font-size-13 text-muted">
+                          &nbsp;{{item.quantity ? '( ' + item.quantity +' '+ item.unit + ' )' :''}}
+                        </span>
+                      </a>
+                    </div>
+                    <!--  bill item subitems -->
+                    <div class="list text-muted">
+                      <div class="list-item p-t-none p-b-none" ng-repeat="subitem in item.items">
+                        <span title="Item Name" class="pull-right text-xs">
+                          {{subitem.quantity}}&nbsp;{{subitem.unit}}
+                        </span>
+                        <div class="item-title">
+                          <a href="#" class="_500">{{subitem.name}}<br />
+                            <span title="Date" class="text-sm text-muted">
+                              {{subitem.time | date:'dd/MM/yyyy'}}
+                            </span>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- end bill item subitems -->
+                  </div>
+                  <!-- end bill item -->
+                  <!-- bill balance summary -->
+                  <div class="m-t-md">
+                    <span>Open Balance</span>
+                    <small class="text-muted pull-right">{{bill.balance.open | currency:'Tsh '}}</small>
+                  </div>
+                  <div>
+                    <span>Periodic Charges</span>
+                    <small class="text-muted pull-right">{{bill.balance.charges | currency:'Tsh '}}</small>
+                  </div>
+                  <div>
+                    <span>Loan/Debt Balance</span>
+                    <small class="text-muted pull-right">{{bill.balance.debt | currency:'Tsh '}}</small>
+                  </div>
+                  <div class="m-b-md">
+                    <span>Closing Balance</span>
+                    <small class="text-muted pull-right">{{bill.balance.close | currency:'Tsh '}}</small>
+                  </div>
+                  <!-- end bill balance summary -->
+                  <!-- bill notes -->
+                  <p class="_500 text-muted">
+                    Note:&nbsp;{{bill.notes}}
+                  </p>
+                  <!-- end bill notes -->
+                </div>
+              </div>
+            </div>
+          </uib-tab>
+        </uib-tabset>
+        <!-- end bill tabs -->
+      </div>
+      <!-- end customer bill information -->
+
+      <!-- account not found details -->
+      <div class="row-col">
+        <div ng-if="!account" class="row-cell v-m">
+          <div class="text-center col-sm-6 offset-sm-3 p-y-lg">
+            <p class="text-muted m-y-lg">Account Not Found</p>
+          </div>
+        </div>
+      </div>
+      <!-- end account not found details -->
     </div>
+  </div>
 </div>
 <!-- end modal body -->
 
 <!-- start filter footer -->
 <div class="modal-footer">
-    <button class="btn btn-default" ng-click="$dismiss()">Cancel</button>
-    <button class="btn btn-primary" ng-click="$dismiss()">OK</button>
+  <button class="btn btn-default" ng-click="$dismiss()">Cancel</button>
+  <button class="btn btn-primary" ng-click="$dismiss()">OK</button>
 </div>
 <!-- end footer filter -->
